fdo#79018: LO hangs while opening file.

Problem Description:
- Document contains footnotes on two pages separatly, first page contains
footnote with break without any type.
- Root cause is found in SwTxtFrm::_Format() where a do-while loop is not
getting quit.
- Changes are made to ensure the loops exits correctly.

Change-Id: If17d8d8b644054a09346e4aa61f4a7da46648fb2